tests/fixtures/invalid/predefined_func_name_file_scope.c
int marker = __func__[0];

int main(void) {
    return marker;
}